--- a/assets/style.css
+++ b/assets/style.css
@@ -35,9 +35,7 @@ main{
     padding: .5em;
     background: white;
     border-radius: 1.5em;
-    flex-grow: 0;
-    flex-shrink: 0;
-    flex-basis: 1;
+    flex: 0 0 1;
     box-shadow: 10px 15px 80px rgba(0, 0, 0, 0.205);
 }
 .articleAvatar, .headerPhone, .articleDogs, .chatScreen section:nth-child(2), .mensagesPrice nav, .mensagesPrice span{
@@ -167,7 +165,7 @@ input{
     border: none;
     background: white;
     outline: none;
-    width: 80%;
+    width: calc(98% - 3em);
 }
 .buttonSubmitMessage{
     cursor: pointer;
@@ -189,9 +187,9 @@ input{
     margin-top: .7em;
     position: relative;
     left: 3%;
-    width: 85%;
+    width: 90%;
     background: white;
-    padding: 1em;
+    padding: 1em .3em 1em 1em;
     border-radius: 20px;
 }
 section>.mensagesPerson1, .mensagesPriceSection{
@@ -313,5 +311,26 @@ p{
     }
     p{
         font-size: .9em;
+    }
+}
+@media (max-width: 335px) {
+    main{
+        margin: 0 0 0 1.5em;
+    }
+    .phone{
+        margin-left: -1em;
+    }
+    .part2{
+        margin-left: -3em;
+        margin-top: -1em;
+        margin-bottom: 0;
+    }
+    h1{
+        margin: .3em auto .3em .7em;
+    }
+    p{
+        font-size: .7em;
+        max-width: 22em;
+        margin: auto;
     }
 }
