--- a/assets/style.css
+++ b/assets/style.css
@@ -316,6 +316,7 @@ p{
 @media (max-width: 335px) {
     main{
         margin: 0 0 0 1.5em;
+        display: inline-block;
     }
     .phone{
         margin-left: -1.5em;
